<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:padding="10dip"
   android:background="@color/background">
      	<LinearLayout 
		android:orientation="vertical"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:padding="28dip" 
		android:layout_gravity="center">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginBottom="25dip"
			android:text="@string/options_label" android:layout_gravity="center"
			android:textSize="32sp"></TextView>
		<RadioGroup android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		<RadioButton android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/easy_radiobutton"
			android:text="@string/easy_label" android:textSize="20sp"></RadioButton>
		<RadioButton android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/medium_label"
			android:textSize="20sp" android:id="@+id/medium_radiobutton"></RadioButton>
		<RadioButton android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/hard_label"
			android:textSize="20sp" android:id="@+id/hard_radiobutton"></RadioButton>
		</RadioGroup>
		<Button android:layout_height="wrap_content" android:background="@drawable/button_selector" android:text="@string/start" android:id="@+id/next" android:layout_marginLeft="64dp" style="@style/ButtonStyle" android:layout_width="112dp"></Button>
</LinearLayout>
</ScrollView>