<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/background">
	<LinearLayout 
		android:orientation="vertical"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:padding="28dip" 
		android:layout_gravity="center">
		<TextView 
			android:text="@string/choose_title"
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:layout_gravity="center" 
			android:textSize="32sp"
			android:layout_marginBottom="25dip" />
		<Button 
			android:id="@+id/single_button" 
			android:text="@string/single_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button_selector"
			style="@style/ButtonStyle"
		/>
		<Button 
			android:id="@+id/two_button"
			android:text="@string/two_label" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button_selector"
			style="@style/ButtonStyle"
		/>
	</LinearLayout>
</ScrollView> 

